docker/k8s-file/centos8-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: centos8-pod
spec:
  containers:
  - name: centos8-container
    image: centos:8
    command: ["sleep", "infinity"]
