docker/k8s-file/webhook-deployment.yaml
# webhook-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhook-acw
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webhook-acw
  template:
    metadata:
      labels:
        app: webhook-acw
    spec:
      containers:
      - name: webhook-acw
        image: jam.common.cdn.repositories.cloud.sap/acw-webhook:v0.0.4
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: registry
      
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: webhook-acw
  name: webhook-acw
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: webhook-acw
  type: ClusterIP

---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: webhook-acw
webhooks:
  - name: webhook-acw-eu10-dev2.dws.workzone.ondemand.com
    clientConfig:
      url: "https://webhook-acw-eu10-dev2.dws.workzone.ondemand.com:8080/validate-delete-resource" 
      caBundle: null  # 设置为 null，允许不进行 SSL 认证
    rules:
      - operations: ["DELETE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["serviceinstances.services.cloud.sap.com", "servicebindings.services.cloud.sap.com", "secrets","pods"]
    sideEffects: None
    admissionReviewVersions: ["v1", "v1beta1"]

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert.gardener.cloud/purpose: managed
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-realm: Authentication Required
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-buffer-size: 8k
    nginx.ingress.kubernetes.io/rewrite-target: /
  generation: 1
  labels:
    app: webhook-acw
  name: webhook-acw-ingress
spec:
  rules:
  - host: webhook-acw-eu10-dev2.dws.workzone.ondemand.com
    http:
      paths:
      - backend:
          service:
            name: webhook-acw
            port:
              number: 8080
        path: /validate-delete-resource
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - '*.dws.workzone.ondemand.com'
    secretName: e-dev2.dws.workzone.ondemand.com
